--- a/loligochi/loligochi-app/MainWindow.xaml
+++ b/loligochi/loligochi-app/MainWindow.xaml
@@ -5,16 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:loligochi_app"
         mc:Ignorable="d"
-        Title="Loligochi" Height="450" Width="800" ResizeMode="NoResize">
+        Title="Loligochi" Height="450" Width="800" ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        KeyDown="Window_KeyDown" Icon="/icon.png">
     <Grid>
-        <Image x:Name="Lux_Brand" Source="/normal.png" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Height="200" Margin="0,49,0,0"/>
+        <Grid x:Name="Welcome_Scene" Visibility="Hidden">
+            <Image x:Name="Lux_Brand" Source="/normal.png" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Height="200" Margin="0,49,0,0"/>
 
-        <TextBlock x:Name="Welcome_Text" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Copperplate Gothic Bold" Margin="0,282,0,0" Width="700" FontSize="30" TextAlignment="Center" FontWeight="Bold">
+            <TextBlock x:Name="Welcome_Text" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Copperplate Gothic Bold" Margin="0,282,0,0" Width="700" FontSize="30" TextAlignment="Center" FontWeight="Bold">
             Welcome to Summoner Rift's Loligochi!
-        </TextBlock>
+            </TextBlock>
 
-        <TextBlock x:Name="Press_E" TextAlignment="Center" FontSize="20" FontFamily="Copperplate Gothic Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,332,0,0">
+            <TextBlock x:Name="Press_E" TextAlignment="Center" FontSize="20" FontFamily="Copperplate Gothic Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,332,0,0">
             Press E
-        </TextBlock>
+            </TextBlock>
+        </Grid>
+        <Grid x:Name="Main_Menu_Scene" Visibility="Visible">
+            <Button Content="New game" HorizontalAlignment="Left" Margin="44,70,0,0" VerticalAlignment="Top" Height="40" Width="133" Click="Button_Click"/>
+            <Button Content="Continue" HorizontalAlignment="Left" Margin="44,140,0,0" VerticalAlignment="Top" Height="40" Width="133" Click="Button_Click"/>
+            <Button Content="Settings" HorizontalAlignment="Left" Margin="44,210,0,0" VerticalAlignment="Top" Height="40" Width="133" Click="Button_Click"/>
+            <Button Content="Credits" HorizontalAlignment="Left" Margin="44,280,0,0" VerticalAlignment="Top" Height="40" Width="133" Click="Button_Click"/>
+            <Button Content="Exit" HorizontalAlignment="Left" Margin="44,350,0,0" VerticalAlignment="Top" Height="40" Width="133" Click="Button_Click"/>
+        </Grid>
     </Grid>
 </Window>
