--- a/loligochi/loligochi-app/MainWindow.xaml
+++ b/loligochi/loligochi-app/MainWindow.xaml
@@ -116,6 +116,7 @@
                 <EasingDoubleKeyFrame KeyTime="0:0:7" Value="1"/>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
+
     </Window.Resources>
 
     <Window.Triggers>
@@ -131,11 +132,8 @@
     </Window.Triggers>
     <Grid>
         <Grid x:Name="Welcome_Scene" Visibility="Visible">
-
+            <MediaElement x:Name="welcome_sound" Height="0" Width="0" Source="welcome-to-summoners-rift.mp3" LoadedBehavior="Manual" UnloadedBehavior="Stop" IsHitTestVisible="False" Position="00:00:00"/>
             <Image x:Name="Lux_Brand" Source="/brand_lux.png" HorizontalAlignment="Center" VerticalAlignment="Top" Width="368" Height="404" Margin="0,71,0,0">
-                <Image.RenderTransform>
-                    <TranslateTransform X="0" Y="0"/>
-                </Image.RenderTransform>
             </Image>
 
             <TextBlock x:Name="Welcome_Text" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Copperplate Gothic Bold" Margin="0,554,0,0" Width="1260" FontSize="46" TextAlignment="Center" FontWeight="Bold" Height="90" Foreground="White">
@@ -170,32 +168,40 @@
 
 
             </Button>
-            <Button x:Name="Continue_Game_Button" Content="Continue" HorizontalAlignment="Left" Margin="20,205,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Continue_Game_Button_Click" FontSize="24" FontFamily="Copperplate Gothic Bold" Foreground="White" Cursor="Arrow"  BorderBrush="{x:Null}">
+            <Button Style="{DynamicResource MainMenuButtons}" x:Name="Continue_Game_Button" Content="Continue" HorizontalAlignment="Left" Margin="20,205,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Continue_Game_Button_Click" FontSize="24" FontFamily="Copperplate Gothic Bold" Foreground="White" Cursor="Arrow"  BorderBrush="{x:Null}">
                 <Button.Background >
                     <ImageBrush x:Name="Continue_Game_Button_Background"  ImageSource="/src/images/assets/button.png" TileMode="None" Stretch="UniformToFill"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="Settings_Button" Content="Settings" HorizontalAlignment="Left" Margin="20,310,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Settings_Button_Click" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}">
+            <Button Style="{DynamicResource MainMenuButtons}" x:Name="Settings_Button" Content="Settings" HorizontalAlignment="Left" Margin="20,310,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Settings_Button_Click" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}">
                 <Button.Background >
                     <ImageBrush x:Name="Settings_Button_Background"  ImageSource="/src/images/assets/button.png" TileMode="None" Stretch="UniformToFill"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="Credits_Button" Content="Credits" HorizontalAlignment="Left" Margin="20,415,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Credits_Button_Click" FontSize="24" FontFamily="Copperplate Gothic Bold" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}">
+            <Button Style="{DynamicResource MainMenuButtons}" x:Name="Credits_Button" Content="Credits" HorizontalAlignment="Left" Margin="20,415,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Credits_Button_Click" FontSize="24" FontFamily="Copperplate Gothic Bold" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}">
                 <Button.Background >
                     <ImageBrush x:Name="Credits_Button_Background"  ImageSource="/src/images/assets/button.png" TileMode="None" Stretch="UniformToFill"/>
                 </Button.Background>
 
             </Button>
-            <Button x:Name="Exit_Button" Content="Exit" HorizontalAlignment="Left" Margin="20,520,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Exit_Button_Click" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}">
+            <Button Style="{DynamicResource MainMenuButtons}" x:Name="Exit_Button" Content="Exit" HorizontalAlignment="Left" Margin="20,520,0,0" VerticalAlignment="Top" Height="91" Width="327" Click="Exit_Button_Click" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}">
                 <Button.Background >
                     <ImageBrush x:Name="Exit_Button_Background"  ImageSource="/src/images/assets/button.png" TileMode="None" Stretch="UniformToFill"/>
                 </Button.Background>
 
             </Button>
-            <TextBlock x:Name="Loligochi_Title" FontSize="72" FontFamily="Copperplate Gothic Bold" Foreground="White" Margin="430,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+
+            <TextBlock x:Name="Loligochi_Shade" FontSize="72" FontFamily="Copperplate Gothic Bold" Foreground="Black" Margin="-1,9,0,0" VerticalAlignment="Top" HorizontalAlignment="Center">
+    Loligochi
+            </TextBlock>
+            <TextBlock x:Name="Loligochi_Title" FontSize="72" FontFamily="Copperplate Gothic Bold" Foreground="White" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" LineHeight="72">
                 <TextBlock.Effect>
                     <DropShadowEffect/>
-                </TextBlock.Effect>Loligochi</TextBlock>
+                </TextBlock.Effect>
+                Loligochi
+            </TextBlock>
+            
         </Grid>
+        
     </Grid>
 </Window>
